--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,20 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            storeFile file("${RELEASE_SIGNING_STORE_KEYSTORE}")
+            storePassword "${RELEASE_SIGNING_STORE_PASSWORD}"
+            keyAlias "${RELEASE_SIGNING_KEY_ALAIS}"
+            keyPassword "${RELEASE_SIGNING_KEY_PASSWORD}"
+        }
+    }
     buildTypes {
         def ANALYTICS_ENABLED = "ANALYTICS_ENABLED"
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
+            signingConfig signingConfigs.release
             buildConfigField "boolean", ANALYTICS_ENABLED, "true"
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -33,6 +42,8 @@ android {
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+
+
 }
 
 dependencies {
