--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,12 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx2048M
 
+RELEASE_SIGNING_STORE_PASSWORD=iqmojo
+RELEASE_SIGNING_STORE_KEYSTORE=iqmojocert.jks
+RELEASE_SIGNING_KEY_PASSWORD=iqmojo
+RELEASE_SIGNING_KEY_ALAIS=iqmojo
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
