Questions detail and first ques api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 repositories {
+    jcenter()
+    maven { url "https://jitpack.io" }
     mavenCentral()
     maven {
         url "https://maven.google.com"
@@ -71,7 +73,12 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.google.android.gms:play-services-drive:11.0.4'
     compile 'com.google.android.gms:play-services-gcm:11.0.4'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.krtkush:LinearTimer:v2.1.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+
 
 apply plugin: 'com.google.gms.google-services'
