--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,12 +96,21 @@
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
 
         <service
-            android:name=".iq_mojo.utils.RegistrationIntentService"
-            android:exported="false" />
-        <service
             android:name=".iq_mojo.utils.MyFirebaseInstanceIDService"
-            android:enabled="true"
-            android:exported="true"></service>
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".iq_mojo.utils.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
